--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  BINARY_PREFIX: "go-cqhttp_"
+  BINARY_SUFFIX: ""
+  COMMIT_ID: "${{ github.sha }}"
+  PR_PROMPT: "::warning:: Build artifact will not be uploaded due to the workflow is trigged by pull request."
+
 jobs:
   build:
     name: Build binary
@@ -32,13 +38,13 @@ jobs:
         GOOS: ${{ matrix.goos }}
         GOARCH: ${{ matrix.goarch }}
         IS_PR: ${{ !!github.head_ref }}
-        run: |
-          if [ $GOOS = "windows" ]; then export BINARY_SUFFIX="$BINARY_SUFFIX.exe"; fi
-          if $IS_PR ; then echo $PR_PROMPT; fi
-          export BINARY_NAME="$BINARY_PREFIX"$GOOS"_$GOARCH$BINARY_SUFFIX"
-          export CGO_ENABLED=0
-          export LD_FLAGS="-w -s -X github.com/okashi-ya/go_test/main.Version=${COMMIT_ID::7}"
-          go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
+      run: |
+        if [ $GOOS = "windows" ]; then export BINARY_SUFFIX="$BINARY_SUFFIX.exe"; fi
+        if $IS_PR ; then echo $PR_PROMPT; fi
+        export BINARY_NAME="$BINARY_PREFIX"$GOOS"_$GOARCH$BINARY_SUFFIX"
+        export CGO_ENABLED=0
+        export LD_FLAGS="-w -s -X github.com/okashi-ya/go_test/main.Version=${COMMIT_ID::7}"
+        go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       if: ${{ !github.head_ref }}
