--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         if $IS_PR ; then echo $PR_PROMPT; fi
         export BINARY_NAME="$BINARY_PREFIX"$GOOS"_$GOARCH$BINARY_SUFFIX"
         export CGO_ENABLED=0
-        export LD_FLAGS="-w -s -X github.com/okashi-ya/go_test/main.Version=${COMMIT_ID::7}"
+        export LD_FLAGS="-w -s -X main.go/u.Version=${COMMIT_ID::7}"
         go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
     - name: Upload artifact
       uses: actions/upload-artifact@v3
