--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -9,16 +9,14 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        run: |
-          git version
-          git clone "${{ github.event.repository.html_url }}" /home/runner/work/go_test/go_test
-          git checkout "${{ github.ref }}"
-
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      -
+        name: Checkout
+        uses: actions/checkout@v4
         with:
-          go-version: '1.20.6'
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v4
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
