--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -9,14 +9,16 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v4
+      - name: Checkout
+        run: |
+          git version
+          git clone "${{ github.event.repository.html_url }}" /home/runner/work/go-cqhttp/go-cqhttp
+          git checkout "${{ github.ref }}"
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          fetch-depth: 0
-      -
-        name: Set up Go
-        uses: actions/setup-go@v4
+          go-version: '1.20'
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
