--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,5 +45,5 @@ jobs:
       uses: actions/upload-artifact@v3
       if: ${{ !github.head_ref }}
       with:
-        name: gotest_${{ matrix.goos }}_${{ matrix.goarch }}
+        name: go_test_${{ matrix.goos }}_${{ matrix.goarch }}
         path: output/
