--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -39,7 +39,7 @@ jobs:
         if $IS_PR ; then echo $PR_PROMPT; fi
         export BINARY_NAME="$BINARY_PREFIX"$GOOS"_$GOARCH$BINARY_SUFFIX"
         export CGO_ENABLED=0
-        export LD_FLAGS="-w -s -X main.go/orders.Version=${COMMIT_ID::7}"
+        export LD_FLAGS="-w -s -X main.go/u/orders.Version=${COMMIT_ID::7}"
         go build -o "output/$BINARY_NAME" -trimpath -ldflags "$LD_FLAGS" .
     - name: Upload artifact
       uses: actions/upload-artifact@v3
